List all the movies on the front page

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Hello</h1>
+<div ng-controller="MovieCtrl">
+  <h1>Movie Listings</h1>
+  <ul ng-repeat="movie in movies">
+    <li>{{ movie.title }}</li>
+  </ul>
+</div>
