--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="jsonRails">
 <head>
   <title>JsonRails</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
