--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,4 @@
-<div ng-controller="MovieCtrl">
+<div ng-controller="MovieListCtrl">
   <h1>Movie Listings</h1>
   <ul ng-repeat="movie in movies">
     <li>{{ movie.title }}</li>
