--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <div ng-controller="MovieListCtrl">
   <h1>Movie Listings</h1>
-  <ul ng-repeat="movie in movies">
+  <ul ng-repeat="movie in moviesList">
     <li>{{ movie.title }}</li>
   </ul>
 </div>
