Add note about headers

--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -10,5 +10,11 @@
   <pre>DELETE /api/movies/:id</pre>
 </div>
 
+<div>
+  <h2>Psst...</h2>
+  <pre>Accept: application/json</pre>
+  <pre>Content-Type: application/json</pre>
+</div>
+
 <p>Read about the API <a href="http://commandercoriander.net/blog/2014/01/04/test-driving-a-json-api-in-rails/">here</a>.</p>
 
