--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,11 @@
     <meta charset="utf-8" />
     <title>json-api.rocks</title>
     <%= stylesheet_link_tag "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
   </head>
 
   <body>
-    <div class="page">
-      <%= yield %>
-    </div>
-  </body>
+    <div id="content"></div>
 
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
